--- a/trailrunner/Views/Shared/_Layout.cshtml
+++ b/trailrunner/Views/Shared/_Layout.cshtml
@@ -16,28 +16,8 @@
             <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         </environment>
     </head>
-    <body>
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">WebApplicationBasic</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="container body-content">
+    <body ng-app="app">
+
             @RenderBody()
             <hr />
             <footer>
@@ -61,6 +41,15 @@
             </script>
             <script src="~/js/site.min.js" asp-append-version="true"></script>
         </environment>
+
+        <script src="~/lib/angular/angular.js"></script>
+        <script src="~/lib/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="~/app/app.module.js"></script>
+        <script src="~/app/app.config.js"></script>
+        <script src="~/app/home.controller.js"></script>
+        <script src="~/app/runners.controller.js"></script>
+        <script src="~/app/runners.service.js"></script>
+
 
         @RenderSection("scripts", required: false)
     </body>
