--- a/trailrunner/wwwroot/css/site.css
+++ b/trailrunner/wwwroot/css/site.css
@@ -32,3 +32,9 @@ textarea {
         z-index: 10 !important;
     }
 }
+
+.jumbotron {
+background-image: url("../img/jumbotron_bg.jpg");
+background-size: cover;
+color: #fff;
+}
