move ng-app to index

--- a/trailrunner/Views/Shared/_Layout.cshtml
+++ b/trailrunner/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
             <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         </environment>
     </head>
-    <body ng-app="app">
+    <body>
 
             @RenderBody()
             <hr />
