--- a/trailrunner/Views/Home/Index.cshtml
+++ b/trailrunner/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<div  ng-app="app">
-    <div ng-view></div>
+<div ng-app="app">
+    <ui-view></ui-viewv>
 </div>
