--- a/trailrunner/Views/Shared/_Layout.cshtml
+++ b/trailrunner/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <base href="/">
         <title>@ViewData["Title"] - trailrunner</title>
 
         <environment names="Development">
