--- a/trailrunner/Views/Home/Index.cshtml
+++ b/trailrunner/Views/Home/Index.cshtml
@@ -1,6 +1,26 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+   <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav"
+            aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href"/">Trail Running Life</a>
+        </div>
+        <div class="collapse navbar-collapse" id="nav">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/runners">Runners</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <div ng-app="app">
     <ui-view></ui-viewv>
 </div>
