--- a/trailrunner/Views/Home/Index.cshtml
+++ b/trailrunner/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href"/">Trail Running Life</a>
+            <a class="navbar-brand" href="/">Trail Running Life</a>
         </div>
         <div class="collapse navbar-collapse" id="nav">
             <ul class="nav navbar-nav">
